--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,9 @@
 {
+    "autoload": {
+        "psr-4": {
+            "App\\": "public/"
+        }
+    },
     "require": {
         "slim/slim": "^4.14",
         "slim/psr7": "^1.7",
