--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "slim/php-view": "^3.4",
         "php-di/php-di": "^7.0",
         "fakerphp/faker": "^1.24",
-        "illuminate/collections": "^12.21"
+        "illuminate/collections": "^12.21",
+        "symfony/string": "^7.3"
     }
 }
