--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "php-di/php-di": "^7.0",
         "fakerphp/faker": "^1.24",
         "illuminate/collections": "^12.21",
-        "symfony/string": "^7.3"
+        "symfony/string": "^7.3",
+        "slim/flash": "^0.4.0"
     }
 }
