solution for exercise 20

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "autoload": {
         "psr-4": {
-            "App\\": "public/"
+            "App\\": "public/",
+            "Src\\": "src/"
         }
     },
     "require": {
