--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "fakerphp/faker": "^1.24",
         "illuminate/collections": "^12.21",
         "symfony/string": "^7.3",
-        "slim/flash": "^0.4.0"
+        "slim/flash": "^0.4.0",
+        "tuupola/slim-basic-auth": "^3.4"
     }
 }
